--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,7 @@ streamlit==1.27.2
 pandas==1.3.3
 numpy==1.21.2
 scikit-learn==1.3.0
-xgboost>=1.0.0,<2.0.0
+xgboost==2.0.1
+numpy==1.26.0
+scipy==1.11.3
+
